@@ -1,3 +1,9 @@
+2007-06-22	Joel Sherrill <joel.sherrill@OARcorp.com>
+
+	* Makefile, init.c: Clean up. Make name of TARFILE related symbols
+	conditional based upon architecture. Change way desired object format
+	is determined so all BSPs compile this test.
+
 2007-06-21	Joel Sherrill <joel.sherrill@OARcorp.com>
 
 	* Makefile: Remove tarfile when make clean.
